# test-cash-register

./: .env.template  .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yaml
deployments/dev/: docker-compose.yaml
deployments/dev/backend/: Dockerfile  entrypoint.sh
deployments/dev/grafana/provisioning/datasources/: loki.yaml
src/cash_register/: manage.py
src/cash_register/checks/: apps.py  jinja2.py  urls.py
src/cash_register/checks/details/: check_html.py  check_storage.py  item_storage.py  logger.py
src/cash_register/checks/operations/: create_check.py
src/cash_register/checks/templates/checks/jinja2/: check.html
src/cash_register/checks/views/: create_check.py
src/cash_register/config/: asgi.py  settings.py  urls.py  wsgi.py
src/cash_register/items/: admin.py  apps.py  models.py  urls.py
src/cash_register/monitoring/: apps.py  structlog.py  urls.py  views.py
src/checks/: jinja2.py  urls.py
src/checks/details/: check_html.py  item_storage.py
src/checks/operations/: create_check.py
src/checks/views/: create_check.py
src/config/: settings.py  urls.py
src/items/: admin.py
src/items/migrations/: 0001_initial.py
src/monitoring/: urls.py
