[project]
name = "test-cash-register"
version = "0.1.0"
description = "Тестовое задание для компании Гроссбит"
authors = [
    {name = "Alexander Smolin", email = "88573504+emptybutton@users.noreply.github.com"}
]
license = "Apache-2.0"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = "==3.13.*"
dependencies = [
    "django==5.1.6",
    "djangorestframework==3.15.2",
    "markdown==3.7",
    "django-filter==25.1",
    "typenv==0.2.0",
    "jinja2==3.1.5",
    "psycopg[binary]==3.2.5",
    "weasyprint==52.5",
    "qrcode[pil]==8.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.9",
    "mypy==1.15.0",
    "django-stubs[compatible-mypy]==5.1.3",
    "djangorestframework-stubs[compatible-mypy]==3.15.3",
    "types-qrcode==8.0.0.20241004",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["weasyprint.*"]
follow_untyped_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.ruff]
src = ["src"]
preview = true
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = [
    "ANN", "F", "W", "E", "B", "C90", "N", "UP", "YTT", "ASYNC", "PL", "RUF",
    "Q", "RET", "SLF", "SLOT", "SIM", "TID252", "TCH", "ARG", "PTH", "ERA", "TRY",
    "PERF", "INP", "I", "S", "FAST", "TID", "TCH", "INT"
]
ignore = ["N818", "RUF009", "UP018", "PLR6301", "PLR0913", "PLW0108", "TC006"]
exclude = ["manage.py", "*/migrations/*"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"src/config/settings.py" = ["S101"]
